// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SetAssigneeAction/> render() should render team dropdown 1`] = `
<Connect(TicketAssigneeContainer)
  className="assignee"
  handleTeams={true}
  handleUsers={false}
  setTeam={[Function]}
  setUser={[Function]}
/>
`;

exports[`<SetAssigneeAction/> render() should render team dropdown with current assignee 1`] = `
<Connect(TicketAssigneeContainer)
  className="assignee"
  currentAssigneeTeam={
    Immutable.Map {
      "id": 1,
      "name": "Team 1",
      "decoration": Immutable.Map {},
    }
  }
  handleTeams={true}
  handleUsers={false}
  setTeam={[Function]}
  setUser={[Function]}
/>
`;

exports[`<SetAssigneeAction/> render() should render user dropdown 1`] = `
<Connect(TicketAssigneeContainer)
  className="assignee"
  handleTeams={false}
  handleUsers={true}
  setTeam={[Function]}
  setUser={[Function]}
/>
`;

exports[`<SetAssigneeAction/> render() should render user dropdown with current assignee 1`] = `
<Connect(TicketAssigneeContainer)
  className="assignee"
  currentAssigneeUser={
    Immutable.Map {
      "id": 1,
      "name": "Team 1",
      "decoration": Immutable.Map {},
    }
  }
  handleTeams={false}
  handleUsers={true}
  setTeam={[Function]}
  setUser={[Function]}
/>
`;
